# MantleEngine

./: .gitattributes  .gitignore  ANALYSIS_SUMMARY_TR.md  CMakeLists.txt  Cargo.toml  ENGINES_ANALYSIS_REPORT.md  LICENSE  PHASE5_PLUS_VULKAN.md  README.md  TEST_RESULTS.txt  VULKAN_BUILD_GUIDE.md  build.rs
cpp/: CMakeLists.txt  render_packet.h  renderer.cpp  vulkan_renderer.cpp  vulkan_renderer.h
cpp/core/: engine.cpp  engine.h  module.h  time_step.h
cpp/examples/: main.cpp
cpp/include/: mantle_engine.h  opengl_renderer.h  renderer.h  runtime.h
cpp/modules/input/: input_system.cpp  input_system.h
cpp/modules/physics/: physics_world.cpp  physics_world.h
cpp/modules/sound/: sound_system.cpp  sound_system.h
cpp/opengl/: opengl_renderer.cpp
cpp/runtime/: runtime.cpp  runtime.h
cpp/shaders/: fragment.glsl  shader.h  vertex.glsl
cpp/tests/: CMakeLists.txt  test_all_engines_integration.cpp  test_opengl_renderer.cpp  test_runtime.cpp  test_vulkan_renderer.cpp  visual_comparison.cpp
cpp/vulkan/: vulkan.h  vulkan_struct.h  vulkan_stub.cpp
output/: frame_0001.ppm  opengl_cross.ppm
scripts/: compile-shaders.py
src/: lib.rs  logger.rs  phase5_plus_tests.rs
src/assets/: mod.rs  texture.rs
src/collision/: detection.rs  mod.rs
src/components/: animation.rs  collider.rs  mod.rs  sprite.rs  transform.rs
src/ecs/: events.rs  mod.rs  systems.rs
src/entity/: manager.rs  mod.rs
src/ffi/: c_abi.rs  cpp_bridge.rs  memory.rs  mod.rs  render_packet.rs
src/scene/: animated_sprite2d.rs  collision_shape2d.rs  mod.rs  node.rs  node2d.rs  sprite2d.rs
src/scripting/: bindings.rs  mod.rs
src/systems/: animation_system.rs  collision_system.rs  mod.rs  render_system.rs
