[package]
name = "mantle-engine"
version = "0.4.0-alpha"
authors = ["Synthesis Lab"]
edition = "2024"
description = "High-performance, multi-layered Rust game engine with ECS, Scene Tree, and FFI Bridge."
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
rhai = "1.19.0"
glam = "0.29"
bevy_ecs = "0.13"
once_cell = "1.19"

[build-dependencies]
# Future: cc crate for C++ compilation if manual build is needed
# cc = "1.0"
